# GSLTr

./: CHANGELOG.md  GSLTr.cabal  TAGS  WGSLTr.cabal  cabal.project  hie.yaml
AstGen/: AstGen.cabal  CHANGELOG.md  LICENSE  TAGS
AstGen/app/: Main.hs
AstGen/src/: AstGen.hs
AstGen/src/AST/: AST.hs  Parse.hs  Token.hs
AstGen/test/: Main.hs
app/: Main.hs
src/: GSLTr.hs  MyLib.hs
