cabal-version:      3.4
name:               GSLTr

-- The package version.
-- See the Haskell package versioning policy (PVP) for standards
-- guiding when and how versions should be incremented.
-- https://pvp.haskell.org
-- PVP summary:     +-+------- breaking API changes
--                  | | +----- non-breaking API additions
--                  | | | +--- code changes with no API change
version:            0.1.0.0
license:            BSD-3-Clause
license-file:       LICENSE
author:             NzSN
maintainer:         nzsn0101@gmail.com
category:           Language
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  GSLTr

    build-depends:    base ^>=4.20.0.0,
                      tree-sitter,
                      tree-sitter-wgsl,
    hs-source-dirs:   src
    default-language: GHC2024

executable GSLTr
    import:           warnings
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.20.0.0,
        GSLTr,

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: GHC2024

test-suite GSLTr-test
    -- Import common warning flags.
    import:           warnings

    -- Base language which the package is written in.
    default-language: GHC2024

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- The interface type and version of the test suite.
    type:             exitcode-stdio-1.0

    -- Directories containing source files.
    hs-source-dirs:   test

    -- The entrypoint to the test suite.
    main-is:          Main.hs

    -- Test dependencies.
    build-depends:
        base ^>=4.20.0.0,
        GSLTr,
